--- a/dream-ml-platform/pyproject.toml
+++ b/dream-ml-platform/pyproject.toml
@@ -11,6 +11,9 @@ pandas = "^2.2.2"
 sklearn = "^0.0.post12"
 scikit-learn = "^1.5.1"
 pydantic = "1.9.1"
+dependency-injector = "4.35.0"
+flask-injector = "^0.15.0"
+injector = "^0.22.0"
 
 [tool.poetry.group.dev.dependencies]
 bandit = "1.7.0"
